# easter-quest

./: Cargo.toml  LICENSE  README.md  Shuttle.toml  mise.toml
migrations/: 0001_init.sql  0002_update_eggs.sql
rsrc/private/: egg01.html  egg02.html  egg03.html  egg04.html  egg05.html  egg06.html  egg07.html  egg08.html  login.html  notfound.html  signup.html
rsrc/public/: style.css
src/: main.rs
templates/: egg.html  error.html  index.html
